# mini_LLM_eval

./: .gitignore  AGENTS.md  DEVELOPMENT.md  LICENSE  README.md  RULES.md  codex_progress.md  config.yaml  providers.yaml  pyproject.toml
data/: eval_cases.jsonl
demo/: README.md  compare_example.md  demo_cases.jsonl
demo/quickstart/: README.md  config.yaml  providers.yaml
demo/reports/: compare-baseline-vs-candidate.md  run-baseline.md
docs/: 10_running_cancel_design.md  11_artifact_store_design.md  12_raw_requirement_gap_report.md  13_production_optimization.md  14_evaluator_roadmap.md  1_overall_design_ty.md  2.1_requirements.md  2_design_v0.1.md  3.1_discussion_topics.md  3.2_design_decisions.md  3_plan_v0.1.md  4.1_reference_projects_analysis.md  4.2_learning_from_deepeval.md  4.3_learning_from_promptfoo.md  4.4_benchmark_comparison.md  4_llm_eval_projects_reference.md  5_critical_design.md  6_version1_dev_plan.md  7_v1_implementation_spec.md  8_v2_design.md  9_v1_report.md
examples/quickstart/: README.md
reviews/: review_01_claude.md  review_01_tianyu.md  review_02_claude.md  review_02_codex_response.md  review_03_claude.md  review_04_claude.md  review_05_claude.md  review_06_code_standards.md  review_07_rate_limiter.md  review_tianyu.md  test_01_tianyu.md  test_tianyu.md
src/mini_llm_eval/: __init__.py
tests/: test_cli.py  test_comparator.py  test_config.py  test_dataset.py  test_evaluators.py  test_logging.py  test_providers.py  test_reporter.py  test_schemas.py  test_services.py  test_state_machine.py  test_storage.py
(+40 files in other folders)
